<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.alexlianardo.moviecatalogue3.ui.movies.MovieFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvShow"
        android:name="com.alexlianardo.moviecatalogue3.ui.tvshow.TvShowFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.alexlianardo.moviecatalogue3.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>