<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tes1"
    tools:context=".ui.SplashScreenActivity">

    <ImageView
        android:id="@+id/github"
        android:layout_width="117dp"
        android:layout_height="118dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/ic_baseline_movie_24" />

    <TextView
        android:id="@+id/made_by"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/made_by"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/github"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/github"
        app:layout_constraintTop_toBottomOf="@+id/github"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/alexlianardo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="160dp"
        android:text="@string/alexlianardo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/made_by"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="@+id/made_by"
        app:layout_constraintTop_toBottomOf="@+id/made_by"
        app:layout_constraintVertical_bias="0.129" />

</androidx.constraintlayout.widget.ConstraintLayout>